--- a/spotify/css/style.css
+++ b/spotify/css/style.css
@@ -169,6 +169,10 @@ h4{
     flex-grow: 1;
 }
 
+.circle {
+    border-radius: 150px;
+}
+
 footer{
     height: 70px;
     width: 100%;
@@ -271,6 +275,85 @@ footer .center .far{
     width: 60%;
 }
 
+/* MEDIUM-LARGE */
+
+@media screen and (min-width: 801px) and (max-width: 1199px) {
+
+    .header{
+        flex-wrap: wrap;
+    }
+
+    .first-row,
+    .second-row,
+    .third-row{
+        flex-wrap: wrap;
+        justify-content: start;
+    }
+    
+    .song{
+        width: calc(25% - 20px);
+        margin: 0 15px 15px 0px;
+    }
+
+    .first-row .song:first-child,
+    .first-row .song:nth-child(5),
+    .second-row .song:first-child,
+    .third-row .song:first-child{
+        margin-left: 0;
+    }
+
+    .first-row .song:last-child,
+    .first-row .song:nth-child(4),
+    .second-row .song:last-child,
+    .third-row .song:last-child{
+        margin-left: 0;
+    }
+
+    .left img{
+        margin: auto 10px;
+    }
+}
+
+/* MEDIUM */
+
+@media screen and (min-width: 575px) and (max-width: 800px) {
+
+    .header{
+        flex-wrap: wrap;
+    }
+
+    .first-row,
+    .second-row,
+    .third-row{
+        flex-wrap: wrap;
+    }
+    
+    .song{
+        width: calc(50% - 15px);
+        margin: 0 5px 15px 5px;
+    }
+
+    .first-row .song:nth-child(even){
+        margin-left: 0;
+    }
+
+    .first-row .song:nth-child(odd){
+        margin-left: 0;
+    }
+
+    .left img{
+        margin: auto 5px;
+    }
+
+    .right{
+        font-size: 12px;
+    }
+
+    #volume{
+        width: 80%;
+    }
+}
+
 /* SMALL */
 
 @media screen and (max-width: 575px) {
@@ -279,15 +362,88 @@ footer .center .far{
         width: 50px;
     }
 
-    .logo{
-        background: url(../img/logo-small.svg) no-repeat 50% 50%;
+    .page{
+        width: calc(100% - 50px);
+    }
+
+    .logo img:last-child{
+        display: block;
+    }
+
+    .logo img:first-child{
+        display: none;
     }
 
     .playlist,
-    p,
-    h5 
+    .sidebar span,
+    .side-scrollbar p,
     hr {
         display: none;
     }
 
+    .sidebar .bottom i{
+        margin: 10px 25%;
+    }
+
+    .sidebar .profile{
+        height: 20px;
+    }
+
+    .header-button{
+        width: calc(100% - 50px);
+    }
+
+    .header{
+        flex-wrap: wrap;
+    }
+
+    .first-row,
+    .second-row,
+    .third-row{
+        flex-wrap: wrap;
+    }
+    
+    .song{
+        width: calc(50% - 15px);
+        margin: 0 5px 15px 5px;
+    }
+
+    .first-row .song:nth-child(even){
+        margin-left: 0;
+    }
+
+    .first-row .song:nth-child(odd){
+        margin-left: 0;
+    }
+
+    .bottom #range{
+        width: 30%;
+    }
+
+    .left,
+    .right {
+        width: 30%;
+    }
+
+    .left img{
+        width: 35px;
+        margin: auto 5px;
+    }
+
+    .left .text{
+        margin-right: 0;
+    }
+
+    .left .icon{
+        font-size: 10px;
+    }
+
+    .left .icon .far:first-child{
+        margin-bottom: 5px;
+    }
+
+    .right{
+        font-size: 10px;
+        padding-right: 5px;
+    }
 }
